auto reformat, working on pscw